--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@ h1 {
     text-align: center;
 }
 
+.select {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.select button {
+    height: 40px;
+    width: 90px;
+}
+
 #diametro {
     margin-left: 57px;
 }
@@ -15,7 +26,7 @@ h1 {
     margin-left: 62px;
 }
 
-button {
+form button {
     margin-left: 106px;
 }
 
@@ -41,3 +52,11 @@ td, th {
     align-items: center;
 }
 
+.input {
+    display: flex;
+    flex-direction: row;
+}
+
+.graficas {
+    margin-left: 15%;
+}
